--- a/project.config
+++ b/project.config
@@ -1,6 +1,5 @@
 [access]
-	inheritFrom = scm/acls/domain_system
+	inheritFrom = scm/acls/domain_platform_development/build
 [project]
-	state = active
 	description = "Domain: System;"\n\
 
